---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC001-3_future.py:1:25: TC003 [*] Move standard library import `collections.Counter` into a type-checking block
  |
1 | from collections import Counter
  |                         ^^^^^^^ TC003
2 |
3 | from elsewhere import third_party
  |
  = help: Move into type-checking block

ℹ Unsafe fix
1     |-from collections import Counter
   1  |+from __future__ import annotations
2  2  | 
3  3  | from elsewhere import third_party
4  4  | 
5  5  | from . import first_party
   6  |+from typing import TYPE_CHECKING
   7  |+
   8  |+if TYPE_CHECKING:
   9  |+    from collections import Counter
6  10 | 
7  11 | 
8  12 | def f(x: first_party.foo): ...

TC001-3_future.py:3:23: TC002 [*] Move third-party import `elsewhere.third_party` into a type-checking block
  |
1 | from collections import Counter
2 |
3 | from elsewhere import third_party
  |                       ^^^^^^^^^^^ TC002
4 |
5 | from . import first_party
  |
  = help: Move into type-checking block

ℹ Unsafe fix
   1  |+from __future__ import annotations
1  2  | from collections import Counter
2  3  | 
3     |-from elsewhere import third_party
4  4  | 
5  5  | from . import first_party
   6  |+from typing import TYPE_CHECKING
   7  |+
   8  |+if TYPE_CHECKING:
   9  |+    from elsewhere import third_party
6  10 | 
7  11 | 
8  12 | def f(x: first_party.foo): ...

TC001-3_future.py:5:15: TC001 [*] Move application import `.first_party` into a type-checking block
  |
3 | from elsewhere import third_party
4 |
5 | from . import first_party
  |               ^^^^^^^^^^^ TC001
  |
  = help: Move into type-checking block

ℹ Unsafe fix
   1  |+from __future__ import annotations
1  2  | from collections import Counter
2  3  | 
3  4  | from elsewhere import third_party
4  5  | 
5     |-from . import first_party
   6  |+from typing import TYPE_CHECKING
   7  |+
   8  |+if TYPE_CHECKING:
   9  |+    from . import first_party
6  10 | 
7  11 | 
8  12 | def f(x: first_party.foo): ...
